--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- css -->
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="./assets/main.css">
     <!-- fonts -->
     <link rel="stylesheet" href="fontawesome-free-5.15.1-web/css/all.min.css">
     <!-- google fonts -->
@@ -506,7 +506,7 @@
     <!-- jquery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js "></script>
     <!-- js script -->
-    <script src="script.js "></script>
+    <script src="./assets/script.js "></script>
 </body>
 
 </html>
